# Shaman

./: .gitignore  Dockerfile  README.md  Schedule-Data.xlsx  backend-endpoint.py  docker-compose.yml  extract.py  grady play.ipynb  index.html  optimization.py  optimization_or.py  pyproject.toml  style.css
.env/: pyvenv.cfg
.env/Scripts/: activate  activate.bat
app/ingest/: course_names.txt
app/ingest/catalog/: bronze_classnav.py  bronze_courses.py  bronze_cs.py  bronze_degree_requirements.py  bronze_general_courses.py  bronze_program_requirements.py  cs_links.txt  scraper_courses.py  test_db.py
app/ingest/catalog/bronze/: bronze_classnav.py  bronze_courses.py  bronze_degree_requirements.py
app/ingest/catalog/silver/: silver_courses.py
app/ingest/processing/: prereq_parser_llm.py
app/model/: optimization.py
data/: Schedule-Data.xlsx
db/init/: bronze.sql
ingest/: extract.py  ingest_data.py
model/: optimization.py
static/: script.js
templates/: index.html  style.css
